--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,44 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
-    repositories {
-        google()
-        jcenter()
-        
+
+    // Versions
+    ext {
+
+        // Gradle
+        gradleVersion = '4.0.0'
+
+        // Kotlin
+        kotlin_version = '1.3.72'
+        ktxVersion = '1.3.0'
+        coroutinesVersion = "1.3.0-M2"
+
+        // Testing
+        coreTestingVersion = '2.1.0'
+        testExtJunit = '1.1.1'
+        junitVersion = '4.12'
+
+        // Google / Android
+        fragmentVersion = '1.3.0-alpha06'
+        appCompatVersion = '1.1.0'
+        constraintLayoutVersion = '2.0.0-beta7'
+        recyclerViewVersion = '1.2.0-alpha03'
+        materialVersion = '1.3.0-alpha01'
+
+        // Google Architecture Components
+        lifecycleVersion = '2.2.0'
+
+        // Image Loading
+        glideVersion = '4.11.0'
+
+        // Serialization / Deserialization
+        moshiVersion = '1.9.3'
+
+        // Remote Api interfacing
+        retrofitVersion = '2.9.0'
     }
+
+
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -14,26 +46,9 @@ buildscript {
         // in the individual module build.gradle files
     }
 
-    ext {
-        // App dependencies
-        appCompatVersion = '1.1.0'
-        constraintLayoutVersion = '2.0.0-beta7'
-        coreTestingVersion = '2.1.0'
-        coroutinesVersion = "1.3.0-M2"
-        espressoVersion = '3.1.1'
-        fragmentVersion = '1.3.0-alpha06'
-        glideVersion = '4.11.0'
-        gradleVersion = '4.0.0'
-        gsonVersion = '2.8.5'
-        junitVersion = '4.12'
-        kotlinVersion = '1.3.72'
-        ktlintVersion = '0.33.0'
-        ktxVersion = '1.3.0'
-        lifecycleVersion = '2.2.0'
-        materialVersion = '1.3.0-alpha01'
-        recyclerViewVersion = '1.2.0-alpha03'
-        runnerVersion = '1.0.1'
-        testExtJunit = '1.1.1'
+    repositories {
+        google()
+        jcenter()
     }
 }
 
