added network response handlers

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,8 @@
-include ':modules:remote'
-include ':modules:app'
-include ':modules:models:domain'
-include ':modules:models:api'
+include ':app'
+include ':features:books'
+include ':data'
+include ':data:remote'
+include ':data:local'
+include ':data:repositories'
+include ':data:models:api'
+include ':data:models:domain'
