--- a/data/data.gradle
+++ b/data/data.gradle
@@ -2,5 +2,7 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "androidx.core:core-ktx:$ktxVersion"
     implementation "com.squareup.moshi:moshi:$moshiVersion"
 }
