--- a/features/books/src/main/AndroidManifest.xml
+++ b/features/books/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.llamalabb.healthnut.features.books">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest package="com.llamalabb.healthnut">
 
-    /
 </manifest>
