--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Sun Jun 21 13:20:05 EDT 2020
+
+org.gradle.parallel=true
 android.enableJetifier=true
 android.useAndroidX=true
 kotlin.code.style=official
