--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include ':app'
 include ':features:books'
-include ':data'
+include ':data:base'
 include ':data:remote'
 include ':data:local'
 include ':data:repositories'
